# go-db

./: .#.gitignore  .cruft.json  .gitignore  CLAUDE  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  qc.yml
docs/: code.md  index.md
docs/dashboard/: Dashboard.ipynb  EC-Analysis.ipynb
docs/dashboard/iea_contributions_export/: enrichment_archaea_GO_REF_0000002.csv  enrichment_archaea_GO_REF_0000003.csv  enrichment_archaea_GO_REF_0000041.csv  enrichment_archaea_GO_REF_0000043.csv  enrichment_archaea_GO_REF_0000044.csv  enrichment_archaea_GO_REF_0000104.csv  enrichment_archaea_GO_REF_0000108.csv  enrichment_archaea_GO_REF_0000116.csv  enrichment_archaea_GO_REF_0000117.csv  enrichment_archaea_GO_REF_0000118.csv  enrichment_clostridium_GO_REF_0000002.csv  enrichment_clostridium_GO_REF_0000003.csv  enrichment_clostridium_GO_REF_0000041.csv  enrichment_clostridium_GO_REF_0000043.csv  enrichment_clostridium_GO_REF_0000044.csv  enrichment_clostridium_GO_REF_0000104.csv  enrichment_clostridium_GO_REF_0000108.csv  enrichment_clostridium_GO_REF_0000116.csv  enrichment_clostridium_GO_REF_0000117.csv  enrichment_clostridium_GO_REF_0000118.csv  enrichment_fly_GO_REF_0000002.csv  enrichment_fly_GO_REF_0000115.csv  enrichment_fungi_GO_REF_0000002.csv  enrichment_fungi_GO_REF_0000003.csv  enrichment_fungi_GO_REF_0000041.csv  enrichment_fungi_GO_REF_0000043.csv  enrichment_fungi_GO_REF_0000044.csv  enrichment_fungi_GO_REF_0000104.csv  enrichment_fungi_GO_REF_0000107.csv  enrichment_fungi_GO_REF_0000108.csv  enrichment_fungi_GO_REF_0000116.csv  enrichment_fungi_GO_REF_0000117.csv  (+85 more)
skills/go-db-query/: SKILL.md
src/go_db/: __init__.py  cli.py  main.py
src/go_db/sql/: __init__.py  (+5 more)
tests/: __init__.py  test_main.py
tests/input/: mgi-truncated.gaf  test-gorules.gaf  test-uniprot-cytosol.gaf  test-uniprot.gaf
(+4 files in other folders)
